Use new WebStateObserver method in IOSTranslateDriver.

ReplaceState is treated as a navigation, but the old method
"navigationItemCommited" was not called in that case and would mess up
translate_manager's language_state, causing a incorrect translation offer.

Bug: 780578
Change-Id: Ie4a5f55c7020a4d76168fcb8e2388a7d47fc815f
Reviewed-on: https://chromium-review.googlesource.com/767043
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Commit-Queue: John Wu <jzw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516380}
Former-commit-id: 8b55433a11a64884d40ddc8947fd93045a7aa457