components/translate/ios/browser/ios_translate_driver.mm
@@ -20,11 +20,11 @@
 #import "components/translate/ios/browser/language_detection_controller.h"
 #import "components/translate/ios/browser/translate_controller.h"
 #include "ios/web/public/browser_state.h"
-#include "ios/web/public/load_committed_details.h"
 #include "ios/web/public/navigation_item.h"
 #include "ios/web/public/navigation_manager.h"
 #include "ios/web/public/referrer.h"
 #include "ios/web/public/web_state/js/crw_js_injection_receiver.h"
+#include "ios/web/public/web_state/navigation_context.h"
 #include "ios/web/public/web_state/web_state.h"
 #include "ui/base/page_transition_types.h"
 #include "ui/base/window_open_disposition.h"
@@ -110,24 +110,24 @@ void IOSTranslateDriver::OnLanguageDetermined(
 
 // web::WebStateObserver methods
 
-void IOSTranslateDriver::NavigationItemCommitted(
+void IOSTranslateDriver::DidFinishNavigation(
     web::WebState* web_state,
-    const web::LoadCommittedDetails& load_details) {
+    web::NavigationContext* navigation_context) {
   DCHECK_EQ(web_state_, web_state);
 
   // Interrupt pending translations and reset various data when a navigation
   // happens. Desktop does it by tracking changes in the page ID, and
   // through WebContentObserver, but these concepts do not exist on iOS.
-  if (!load_details.is_in_page) {
+  if (!navigation_context->IsSameDocument()) {
     ++page_seq_no_;
     translate_manager_->set_current_seq_no(page_seq_no_);
   }
 
   // TODO(droger): support navigation types, like content/ does.
   const bool reload = ui::PageTransitionCoreTypeIs(
-      load_details.item->GetTransitionType(), ui::PAGE_TRANSITION_RELOAD);
-  translate_manager_->GetLanguageState().DidNavigate(load_details.is_in_page,
-                                                     true, reload);
+      navigation_context->GetPageTransition(), ui::PAGE_TRANSITION_RELOAD);
+  translate_manager_->GetLanguageState().DidNavigate(
+      navigation_context->IsSameDocument(), true, reload);
 }
 
 void IOSTranslateDriver::WebStateDestroyed(web::WebState* web_state) {
